--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.8",
-    "angular-file-model": "~0.3.1"
+    "angular-file-model": "~0.3.1",
+    "angular-ui-router": "^0.2.17"
   }
 }
