--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "angular": "~1.4.8",
     "angular-file-model": "~0.3.1",
-    "angular-ui-router": "^0.2.17"
+    "angular-ui-router": "^0.2.17",
+    "angular-progress-button-styles": "^0.1.0",
+    "font-awesome": "fontawesome#^4.5.0"
   }
 }
