Improve build process : generate archive.

--- a/build-config.json
+++ b/build-config.json
@@ -1,6 +1,6 @@
 {
   "osx" : {
-    "title": "Stylay",
+    "title": "stylay",
     "background": "assets/stylay.png",
     "icon": "assets/stylay.icns",
     "icon-size": 80,
