--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "pretest": "eslint --ext js,jsx src test",
     "test": "mocha --compilers js:babel-core/register --require test/helper.js --recursive",
     "start": "electron .",
-    "build": "webpack && rm -r dist || build -mwl"
+    "build": "webpack && rm -r dist || build -mwl",
+    "dev": "NODE_ENV=dev electron ."
   },
   "repository": {
     "type": "git",
@@ -50,7 +51,8 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.1.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "babel": {
     "presets": [
