--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^2.13.1",
     "eslint-plugin-react": "^5.2.2",
     "file-loader": "^0.9.0",
+    "ignore-styles": "^4.0.0",
     "img-loader": "^1.2.2",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.1.0",
