--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.5.0",
+    "chai-immutable": "^1.6.0",
     "cheerio": "^0.20.0",
     "css-loader": "^0.23.1",
     "electron-builder": "^5.7.0",
