--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/n6g7/stylay#readme",
   "dependencies": {
     "jade": "^1.11.0",
-    "stylus": "^0.54.5"
+    "stylus": "^0.54.5",
+    "watchpack": "^1.1.0"
   }
 }
