--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-immutable": "^3.0.8",
     "redux-logger": "^2.6.1",
     "stylus": "^0.54.5"
   },
