--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "immutable": "^3.8.1",
     "jade": "^1.11.0",
     "lodash": "^4.16.4",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-immutable": "^3.0.8",
