--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "homepage": "https://github.com/n6g7/stylay#readme",
   "dependencies": {
     "immutable": "^3.8.1",
-    "jade": "^1.11.0",
     "lodash": "^4.16.4",
     "prop-types": "^15.6.2",
+    "pug": "^2.0.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^4.4.5",
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.10.0",
     "file-loader": "^0.9.0",
     "img-loader": "^1.3.1",
+    "json-loader": "^0.5.7",
     "prettier": "^1.14.2",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
