--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^3.6.0",
     "redux-immutable": "^3.0.8",
     "redux-logger": "^2.7.0",
+    "styled-components": "^3.4.2",
     "stylus": "^0.54.5"
   },
   "devDependencies": {
